--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="email_text">Email Address</string>
     <string name="register_button_text">REGISTER</string>
     <string name="register_here_text">Register Here</string>
+    <string name="Save_button">SAVE</string>
+    <string name="cancel_button">CANCEL</string>
 </resources>
